# sonar_obstacle_avoidance

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: bluerov_ign_sim.launch.py  bluerov_maze_avoidance.launch.py
nodes/: naive_avoidance.py  potential_avoidance.py
sonar_obstacle_avoidance/: potential_avoidance.py
